# whisper_voice_to_text

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.MD  USER_GUIDE.md  com.voice-to-text.plist  install-linux.sh  install-mac.sh  install-windows.bat  main.py  ollama.service  pyproject.toml  requirements.txt  rules.md  run-linux.sh  run-mac.sh  run-windows.ps1  run_voice_to_text.bat  run_voice_to_text.sh  setup.py  test_apis.py  voice-to-text.service  voice_to_text.py  voice_to_text.service
voicetotext/: __init__.py  __main__.py
voicetotext/controllers/: __init__.py  recorder.py
voicetotext/core/: __init__.py  app.py  audio.py  llm.py  transcription.py
voicetotext/models/: __init__.py  llm.py
voicetotext/utils/: __init__.py  audio.py  config.py  logging_config.py  pynput_keyboard.py  system_checks.py
